     OK deraadt@.
   - djm@cvs.openbsd.org 2006/10/06 02:29:19
     [ssh-agent.c ssh-keyscan.c ssh.c]
     sys/resource.h needs sys/time.h; prompted by brad@
     (NB. Id sync only for portable)
   - djm@cvs.openbsd.org 2006/10/09 23:36:11
     [session.c]
     xmalloc -> xcalloc that was missed previously, from portable
     (NB. Id sync only for portable, obviously)

20061018
 - (dtucker) OpenBSD CVS Sync
   - ray@cvs.openbsd.org 2006/09/25 04:55:38
     [ssh-keyscan.1 ssh.1]
     Change "a SSH" to "an SSH".  Hurray, I'm not the only one who
     pronounces "SSH" as "ess-ess-aich".
     OK jmc@ and stevesk@.
 - (dtucker) [sshd.c] Reshuffle storing of pw struct; prevents warnings
   on older versions of OS X.  ok djm@

20061016
 - (dtucker) [monitor_fdpass.c] Include sys/in.h, required for cmsg macros
   on older (2.0) Linuxes.  Based on patch from thmo-13 at gmx de.

20061006
 - (tim) [buildpkg.sh.in] Use uname -r instead of -v in OS_VER for Solaris.
   Differentiate between OpenServer 5 and OpenServer 6
 - (dtucker) [configure.ac] Set put -lselinux into $LIBS while testing for
   SELinux functions so they're detected correctly.  Patch from pebenito at
   gentoo.org.
 - (tim) [buildpkg.sh.in] Some systems have really limited nawk (OpenServer).
   Allow setting alternate awk in openssh-config.local.

20061003
 - (tim) [configure.ac] Move CHECK_HEADERS test before platform specific
   section so additional platform specific CHECK_HEADER tests will work
   correctly. Fixes "<net/if_tap.h> on FreeBSD" problem report by des AT des.no
   Feedback and "seems like a good idea" dtucker@

20061001
 - (dtucker) [audit-bsm.c] Include errno.h.  Pointed out by des at des.no.

20060929
 - (dtucker) [configure.ac] Bug #1239: Fix configure test for OpenSSH engine
   support.  Patch from andrew.benham at thus net.

20060928
 - (dtucker) [entropy.c] Bug #1238: include signal.h to fix compilation error
   on Solaris 8 w/out /dev/random or prngd.  Patch from rl at